--- a/PROJECT/PROJECT/PROJECT/PROJECT.csproj
+++ b/PROJECT/PROJECT/PROJECT/PROJECT.csproj
@@ -101,6 +101,7 @@
     <Content Include="js\bootstrap.min.js" />
     <Content Include="js\jquery.min.js" />
     <Content Include="js\parallax.min.js" />
+    <Content Include="login.aspx" />
     <Content Include="SignUp.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
@@ -161,6 +162,12 @@
     <Compile Include="Home.aspx.designer.cs">
       <DependentUpon>Home.aspx</DependentUpon>
     </Compile>
+    <Compile Include="login.aspx.cs">
+      <DependentUpon>login.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="login.aspx.designer.cs">
+      <DependentUpon>login.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Master_Pages\Main_w_Login.Master.cs">
       <DependentUpon>Main_w_Login.Master</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -190,6 +197,7 @@
     <Compile Include="Master_Pages\AppPage.Master.designer.cs">
       <DependentUpon>AppPage.Master</DependentUpon>
     </Compile>
+    <Compile Include="veritabani_islemleri.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Master_Pages\Main_w_Login.Master" />
